comics are too small, so i'm fixing the css

--- a/comic.css
+++ b/comic.css
@@ -74,7 +74,7 @@ body {
 }
 
 #comic > img{
-	width: 30vw;
+	width: 50vw;
 }
 
 #disqus_thread{
